--- a/package.json
+++ b/package.json
@@ -10,17 +10,27 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "firebase": "^9.23.0",
     "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.255.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.13.0",
-    "socket.io-client": "^4.6.2"
+    "socket.io-client": "^4.6.2",
+    "tailwind-merge": "^1.14.0",
+    "tailwindcss-animate": "^1.0.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^20.4.5",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@types/react-router-dom": "^5.3.3",
