--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
@@ -26,6 +27,7 @@
     "react-hook-form": "^7.45.2",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.13.0",
+    "recharts": "^2.7.2",
     "socket.io-client": "^4.6.2",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.6",
